--- a/style.css
+++ b/style.css
@@ -1,3 +1,369 @@
-body {
-    
+.page {
+  min-width: 1100px;
+  /* мы ещё не умеем делать мобильную версию сайта, */
+  /* поэтому выше установлена минимальная ширина страницы */
+  max-width: 1600px;
+  /* выше установили ограничение по максимальной ширине */
+  margin: 0 auto;
+  /* выше для экранов больше 1600px отцентрировали весь контент */
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+}
+
+.header {
+  height: 100vh;
+  min-height: 600px;
+  max-height: 756px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  background-color: rgb(242, 242, 242);
+  /* выше установили ограничения для секции */
+}
+
+.header__main-illustration {
+  margin: 0;
+  width: 765px;
+  height: 608px;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  z-index: 1;
+}
+
+.header__title {
+  color: black;
+  width: 730px;
+  line-height: 96px;
+  margin: 0 0 0 64px;
+  font-size: 102px;
+  font-weight: 600;
+  position: relative;
+}
+
+.header__subtitle {
+  margin: 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  max-width: 388px;
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+}
+
+/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.header__square-pic {
+  height: 568px;
+  width: 568px;
+  background-color: #2f80ed;
+  top: 64px;
+  right: 0px;
+  position: absolute;
+}
+
+.logo {
+  width: 228px;
+  height: 32px;
+}
+
+.logo_place_header {
+  background-image: url(../images/logo_place_header.svg);
+  position: absolute;
+  top: 30px;
+  width: 228px;
+  height: 32px;
+  top: 30px;
+  left: 64px;
+}
+
+.description {
+  margin-top: 100px;
+}
+
+.two-columns {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  justify-content: space-between;
+  position: relative;
+}
+
+.two-columns__brief {
+  margin: 0;
+  width: 175px;
+  color:#2f80ed;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.two-columns__main-text {
+  margin: 0;
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  margin: 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin-bottom:30px;
+}
+
+.two-columns__paragraph:nth-of-type(3){
+  margin-bottom: 0;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.digits{
+  margin-top: 100px;
+  margin-bottom: 100px;
+  position: relative;
+  z-index: 2;
+}
+
+.section-title{
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.section-subtitle{
+  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table{
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 1100px;
+  z-index: 1;
+
+}
+
+.table__cell{
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading{
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table__text{
+  margin:0px;
+  margin-top: 20px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.feynman{
+  position: relative;
+  min-height: 890px;
+  background-color: #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-size: 867px 637px;
+  background-position: left bottom;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
+.feynman__title{
+  margin-top: 100px;
+  width: 648px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 70px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+}
+
+.feynman__subtitle{
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+
+}
+
+.feynman__link{
+  position: absolute;
+  top: 40%;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  right: 60px;
+}
+
+.kaufman {
+  overflow: hidden;
+  padding-top: 90px;
+  padding-bottom: 90px;
+  position: relative;
+  background-color: black;
+}
+
+.section-title_theme_dark {
+  margin: 0;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  color: white;
+}
+
+.section-subtitle_theme_dark {
+  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  color: white;
+}
+
+.kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: contain;
+  position: absolute;
+  width: 877px;
+  height: 877px;
+  right: -210px;
+  top: 0;
+}
+
+/* и элемента с модификатором вида ключ-значение */
+.table__cell_theme_dark {
+  width: 200px;
+  color: white;
+  margin-right: 0;
+  margin-top: 80px;
+}
+
+.footer{
+  min-height: 350px;
+  background-color: black;
+  color: white;
+}
+
+.footer__columns{
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
+.footer__column{
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.footer__column_content_copyright{
+  flex-basis: 711px;
+}
+
+.logo_place_footer{
+  background-image: url(../images/logo_place_footer.svg);
+  width: 228px;
+  height: 32px;
+}
+
+.footer__author{
+  margin-top: 18px;
+  margin-bottom: 18px;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column_content-info{
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column-heading{
+  margin-bottom: 20px;
+  margin-top: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column-links{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 16px;
+  list-style-type: none;
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column_content-social{
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column-link{
+  margin: 0;
+  padding: 0;
+  flex-direction: column;
+  text-decoration: none;
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__social-icons{
+  width: 16px;
+  height: 16px;
+  position: relative;
+  margin-right: 10px;
 }
